derive/test/compile_fail/ref_no_lifetime.rs
use sval_derive::*;

#[derive(Value)]
#[sval(ref)]
pub struct NoLifetime {
    a: i32,
}

fn main() {}
